# bootlegShazam

./: .gitignore  CMakeLists.txt  README.md  main.cpp  store.db  store.db-journal
include/: db.h  encoding.h  fft.h  wavProcessing.h
lib/: wavProcessing.h
source/: db.cpp  encoding.cpp  fft.cpp  wavProcessing.cpp
